--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic+Coding&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -13,4 +15,8 @@
   border-right: 1px solid lightgray;
   height: 100vh;
   width: 100vw;
+}
+
+textarea {
+  font-family: "Nanum Gothic Coding", monospace;
 }
